[project]
name = "personal-venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[athena,bigquery,deltalake,filesystem,postgres]>=1.13.0",
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
]
